@@ -1,4 +1,4 @@
-# $NetBSD: dirs.mk,v 1.2 2004/04/17 11:10:53 jmmv Exp $
+# $NetBSD: dirs.mk,v 1.3 2004/07/30 11:24:38 xtraeme Exp $
 #
 
 .if !defined(DIRS_XFREE86_MK)
@@ -6,7 +6,6 @@ DIRS_XFREE86_MK=	# defined
 
 oldval:=		${XFREE86_ONLY_DIRS}
 XFREE86_ONLY_DIRS:=	YES
-.include "../../meta-pkgs/XFree86/Makefile.common"
 XFREE86_ONLY_DIRS:=	${oldval}
 .undef oldval
 
